--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "d:\\mysql-connector-j-9.4.0\\mysql-connector-j-9.4.0.jar",
         "c:\\Users\\raksh\\Downloads\\sqlite-jdbc-3.50.3.0.jar"
     ],
-    "java.debug.settings.onBuildFailureProceed": true
+    "java.debug.settings.onBuildFailureProceed": true,
+    "java.compile.nullAnalysis.mode": "automatic"
 }
